--- a/packages/docs/src/pages/tokens/radii.mdx
+++ b/packages/docs/src/pages/tokens/radii.mdx
@@ -1,6 +1,6 @@
 import { Meta, Unstyled } from '@storybook/blocks';
 import { TokensGrid } from '../../components/TokensGrid';
-import { radii } from '@ignite-ui/tokens'
+import { radii } from '@mystudy-ui/tokens'
 
 <Meta title="Tokens/Radii" />
 
